# icon_maker

./: .gitignore  README.md  desktop.ini  icon_maker.py  iconify.spec  install_iconify.cmd  pyproject.toml  test_icon_maker.py  uninstall_iconify.cmd
icon_output_gif_frame2/drive/: autorun.inf
src/iconify/: __init__.py  cli.py  core.py  emoji_sources.py  windows.py
tools/: debug_emojipedia_designs.py  debug_emojipedia_pick.py  emojipedia_inspect.py  find_emojipedia_designs_template.py  find_emojipedia_graphql_client.py  iconify_entry.py  probe_zobj_thumbs.py  test_emojipedia_graphql.py
